@@ -1,5 +1,4 @@
-/**
- * @copyright
+/*
  * ====================================================================
  *    Licensed to the Apache Software Foundation (ASF) under one
  *    or more contributor license agreements.  See the NOTICE file
@@ -18,7 +17,6 @@
  *    specific language governing permissions and limitations
  *    under the License.
  * ====================================================================
- * @endcopyright
  */
 
 package org.apache.subversion.javahl.types;
@@ -29,32 +27,39 @@ package org.apache.subversion.javahl.types;
  */
 public class RevisionRange implements Comparable<RevisionRange>, java.io.Serializable
 {
-    // Update the serialVersionUID when there is a incompatible change
-    // made to this class.  See any of the following, depending upon
-    // the Java release.
-    // http://java.sun.com/j2se/1.3/docs/guide/serialization/spec/version.doc7.html
-    // http://java.sun.com/j2se/1.4/pdf/serial-spec.pdf
-    // http://java.sun.com/j2se/1.5.0/docs/guide/serialization/spec/version.html#6678
-    // http://java.sun.com/javase/6/docs/platform/serialization/spec/version.html#6678
-    private static final long serialVersionUID = 1L;
+    // Update the serialVersionUID when there is an incompatible change made to
+    // this class.  See the Java documentation (following link or its counter-
+    // part in your specific Java release) for when a change is incompatible.
+    // https://docs.oracle.com/en/java/javase/11/docs/specs/serialization/version.html#type-changes-affecting-serialization
+    private static final long serialVersionUID = 2L;
 
     private Revision from;
     private Revision to;
+    private boolean inheritable;
 
     /**
      * Creates a new instance.  Called by native library.
      */
-    @SuppressWarnings("unused")
-    private RevisionRange(long from, long to)
+    protected RevisionRange(long from, long to, boolean inheritable)
     {
         this.from = Revision.getInstance(from);
         this.to = Revision.getInstance(to);
+        this.inheritable = inheritable;
+    }
+
+    /** @since 1.9 */
+    public RevisionRange(Revision from, Revision to, boolean inheritable)
+    {
+        this.from = from;
+        this.to = to;
+        this.inheritable = inheritable;
     }
 
     public RevisionRange(Revision from, Revision to)
     {
         this.from = from;
         this.to = to;
+        this.inheritable = true;
     }
 
     /**
@@ -69,6 +74,11 @@ public class RevisionRange implements Comparable<RevisionRange>, java.io.Seriali
         {
             return;
         }
+
+        this.inheritable = !revisionElement.endsWith("*");
+        if (!this.inheritable)
+            revisionElement =
+                revisionElement.substring(0, revisionElement.length() - 1);
 
         int hyphen = revisionElement.indexOf('-');
         if (hyphen > 0)
@@ -93,8 +103,10 @@ public class RevisionRange implements Comparable<RevisionRange>, java.io.Seriali
             try
             {
                 long revNum = Long.parseLong(revisionElement.trim());
-                this.from = new Revision.Number(revNum);
-                this.to = this.from;
+                if (revNum <= 0)
+                    return;
+                this.to = new Revision.Number(revNum);
+                this.from = new Revision.Number(revNum - 1);
             }
             catch (NumberFormatException e)
             {
@@ -113,14 +125,29 @@ public class RevisionRange implements Comparable<RevisionRange>, java.io.Seriali
         return to;
     }
 
+    public boolean isInheritable()
+    {
+        return inheritable;
+    }
+
     public String toString()
     {
         if (from != null && to != null)
         {
-            if (from.equals(to))
-                return from.toString();
+            String rep;
+
+            if (from.getKind() == Revision.Kind.number
+                && to.getKind() == Revision.Kind.number
+                && (((Revision.Number)from).getNumber() + 1
+                    == ((Revision.Number)to).getNumber()))
+                rep = to.toString();
+            else if (from.equals(to)) // Such ranges should never happen
+                rep = from.toString();
             else
-                return from.toString() + '-' + to.toString();
+                rep = from.toString() + '-' + to.toString();
+            if (!inheritable)
+                return rep + '*';
+            return rep;
         }
         return super.toString();
     }
@@ -132,13 +159,13 @@ public class RevisionRange implements Comparable<RevisionRange>, java.io.Seriali
         {
             val = ((Revision.Number) rev).getNumber();
         }
-        return new Long(val);
+        return Long.valueOf(val);
     }
 
     public int hashCode()
     {
         final int prime = 31;
-        int result = 1;
+        int result = (inheritable ? 1 : 2);
         result = prime * result + ((from == null) ? 0 : from.hashCode());
         result = prime * result + ((to == null) ? 0 : to.hashCode());
         return result;
@@ -178,10 +205,12 @@ public class RevisionRange implements Comparable<RevisionRange>, java.io.Seriali
             return false;
         }
 
-        return true;
+        return (inheritable == other.inheritable);
     }
 
     /**
+     * <b>Note:</b> Explicitly ignores inheritable state.
+     *
      * @param range The RevisionRange to compare this object to.
      */
     public int compareTo(RevisionRange range)
